@@ -1,6 +1,10 @@
 Version 1.1
+~~~~~~~~~~~
+* Post DiFX-2.4
 * Added incrementVDIFHeader
 * vsum: error message -> stderr, not stdout
+* Support new EDV2 that is produced by R2DBE.  Note that no official documentation exists at this time.  Interface is reverse engineered for now.
+* Add Mark6 awareness to printVDIFheader.  If the Mark6 signature is found at the beginning, 28 bytes will be skipped to allow proper decoding.
 
 Version 1.0
 ~~~~~~~~~~~
